--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <tr>
 <td>1862804167</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/bloodseeker_sb.png" /> 嗜血狂魔</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">16</td>
 <td>9/11/14</td>
 <td>2015年10月13日 08:28:38</td>
@@ -123,7 +123,7 @@
 <tr>
 <td>1859175515</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/spirit_breaker_sb.png" /> 裂魂人</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">9</td>
 <td>1/10/12</td>
 <td>2015年10月11日 19:07:17</td>
@@ -178,7 +178,7 @@
 <tr>
 <td>1823828680</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/magnataur_sb.png" /> 马格纳斯</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">18</td>
 <td>4/7/10</td>
 <td>2015年09月27日 18:25:22</td>
@@ -202,7 +202,7 @@
 <tr>
 <td>1823443352</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/sand_king_sb.png" /> 沙王</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">16</td>
 <td>4/9/20</td>
 <td>2015年09月27日 15:54:59</td>
@@ -273,7 +273,7 @@
 <tr>
 <td>1848710926</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/axe_sb.png" /> 斧王</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">15</td>
 <td>4/6/6</td>
 <td>2015年10月07日 14:32:21</td>
@@ -368,7 +368,7 @@
 <tr>
 <td>1717909852</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/tusk_sb.png" /> 巨牙海民</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">24</td>
 <td>12/8/15</td>
 <td>2015年08月16日 15:36:33</td>
@@ -376,7 +376,7 @@
 <tr>
 <td>1717714167</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/sand_king_sb.png" /> 沙王</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">18</td>
 <td>2/3/12</td>
 <td>2015年08月16日 13:53:08</td>
@@ -408,7 +408,7 @@
 <tr>
 <td>1715135490</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/leshrac_sb.png" /> 拉席克</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">22</td>
 <td>4/13/16</td>
 <td>2015年08月15日 17:03:40</td>
@@ -463,7 +463,7 @@
 <tr>
 <td>1820997370</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/weaver_sb.png" /> 编织者</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">24</td>
 <td>5/3/18</td>
 <td>2015年09月26日 19:54:06</td>
@@ -479,7 +479,7 @@
 <tr>
 <td>1820506366</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/sand_king_sb.png" /> 沙王</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">25</td>
 <td>12/9/24</td>
 <td>2015年09月26日 16:20:11</td>
@@ -487,7 +487,7 @@
 <tr>
 <td>1820401407</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/storm_spirit_sb.png" /> 风暴之灵</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">21</td>
 <td>6/9/12</td>
 <td>2015年09月26日 15:12:25</td>
@@ -550,7 +550,7 @@
 <tr>
 <td>1848843613</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/bristleback_sb.png" /> 钢背兽</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">25</td>
 <td>9/11/15</td>
 <td>2015年10月07日 16:30:18</td>
@@ -614,7 +614,7 @@
 <tr>
 <td>1836054841</td>
 <td><img alt="" src="http://media.steampowered.com/apps/dota2/images/heroes/zuus_sb.png" /> 宙斯</td>
-<td align="center"><font color=green>胜利</font></td>
+<td align="center"><font color=red>失败</font></td>
 <td align="center">16</td>
 <td>5/6/7</td>
 <td>2015年10月02日 14:40:14</td>
