--- a/pages/about.html
+++ b/pages/about.html
@@ -59,7 +59,7 @@
 <tbody>
 <tr>
 <td align="center">171753897</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4f479e1f61d10422aabf947f03da202ea87ed21.jpg" />无敌披风卧槽</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4f479e1f61d10422aabf947f03da202ea87ed21.jpg" />建丰同志，我是曾可达</td>
 <td align="center">一号位 SOLO</td>
 </tr>
 <tr>
