--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 <td align="center">138060623</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />三灶湄公鱼</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />三灶比目鱼</td>
 <td align="center">三号位 辅助</td>
 </tr>
 <tr>
@@ -79,7 +79,7 @@
 </tr>
 <tr>
 <td align="center">157934874</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />大团锦鲤鱼</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />大团老黑鱼</td>
 <td align="center">辅助</td>
 </tr>
 <tr>
