--- a/pages/team-matches.html
+++ b/pages/team-matches.html
@@ -49,7 +49,7 @@
   </header>
   <div>
     <h1>LZL战队总战绩</h1>
-<h2>LZL战队 总比赛场数：9场</h2>
+<h2>总比赛场数：9场</h2>
 <h2><font color="green">胜场：2场</font></h2>
 <h2><font color="red">败场：7场</font></h2>
 <h2><strong>总胜率</strong>：22%</h2>
